[package]
name = "stellaris_prometheus_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7.1.3"
zip = "0.6.6"
serde_json = "1.0"
serde = { version = "1.0.171", features = ["derive"] }
prometheus = "0.13.3"
actix-web = "4.3.1"
log = "0.4.19"
derive_more = "0.99.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
notify = "6.0.1"
regex = "1.9.1"
walkdir = "2.3.3"
actix-rt = "2.8.0"
futures = "0.3.28"
once_cell = "1.18.0"
jomini = { version = "0.22.1", features = ["json"] }
toml = "0.7.6"
